--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,270 @@
-/* You can add global styles to this file, and also import other style files */
+.OverAll {
+  //position: fixed;
+  //grid-template-columns: 30% 70%;
+  //grid-template-rows: 15% 85;
+  margin: 0%;
+  padding: 0%;
+  background-color: #161a1f;
+}
+
+/////////////////////////////Center//////////////////////////////////////////////////////////////
+
+.header1 {
+  position: fixed;
+  width: 100%;
+  height: 14.3%;
+  background-color: darkgray;
+  text-align: center;
+  border: 2px solid #3d3b36;
+}
+
+
+//////////////////////////////Left//////////////////////////////////////////////////////////////
+
+.LeftSide {
+  background-color: #161a1f;
+  margin-left: 2%;
+}
+
+.ScoreArea {
+  background-color: lightgray;
+  border: 2px solid black;
+  border-radius: 100px;
+  width: 28%;
+  height: 10%;
+  top: 15.5%;
+  position: fixed;
+  left: .5%;
+  padding: 1%;
+}
+
+.MainClick {
+  background-color: lightblue;
+  width: 27%;
+  padding: 5%; //prev5
+  margin: 2%;
+  font-size: 2vw;
+  border-radius: 50px;
+  font-weight: bolder;
+
+  position: fixed;
+  left: 0%;
+  bottom: 30%;
+}
+
+.MainClick:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
+.MainClick:hover {
+  background-color: rgb(192, 218, 226);
+}
+
+
+.RedButton {
+  background-color: var(--RedButCol);
+  font-weight: bolder;
+  width: 100px;
+  height: 100px;
+
+  position: fixed;
+  left: 23%;
+  bottom: 0%;
+
+  margin: 1%; //prev2
+  border-radius: 100px;
+  //transition-duration: 0.1s;
+}
+
+.RedButton:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px var(--RedButCol);
+}
+
+.UpgradeMenu {
+  background-color: rgb(105, 103, 103);
+  position: fixed;
+  overflow-y: scroll;
+  //border: 4px solid black;
+  width: 22%;
+  height: 31%;
+  bottom: 0%;
+  left: 0%;
+}
+
+.UpgradeBase {
+  background-color: lightgray;
+  border: 2px solid black;
+  height: 30%;
+  border-top-right-radius: 30px 50%;
+  border-bottom-right-radius: 30px 50%;
+}
+
+.UpgradeBase:hover {
+  background-color: rgb(223, 220, 220);
+}
+
+.UpgradeTitle {
+  background-color: lightblue;
+  border: 2px solid black;
+  position: relative;
+  width: 70%;
+  left: 2%;
+  top: -80%;
+}
+
+.UpgradeButton {
+  position: relative;
+  background-color: lightblue;
+  border: 1px solid black;
+  border-radius: 50%;
+
+  height: 95%;
+  width: 20%;
+  top: 2.5%;
+  right: -78.5%;
+}
+
+.UpgradeButton:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
+.UpgradeButton:hover {
+  background-color: rgb(192, 218, 226);
+}
+
+
+
+
+//////////////////////////////////////////////////////////////////////////////////////////////
+.RightSide {
+  background-color: rgb(105, 103, 103);
+  overflow-y: scroll;
+  margin-left: 2%;
+  position: fixed;
+  bottom: 0%;
+  right: 0%;
+  left: 30%;
+  top: 15%;
+}
+
+
+.buildingBase {
+  height: 35%;
+}
+
+
+.buildingBackground1 {
+  background-color: lightgray;
+  border: 4px solid black;
+  position: relative;
+  left: 3%;
+  width: 90%;
+  padding: 2%; //prev2
+  height: 75%;
+  //border-radius: 100px;
+  border-top-left-radius: 30px 50%;
+  border-bottom-left-radius: 30px 50%;
+}
+
+.buildingBackground1:hover {
+  transform: scale(1.02);
+  background-color: rgb(228, 228, 228);
+}
+
+
+.BuildingLabel {
+  background-color: lightblue;
+  font-weight: bold;
+  text-align: center;
+  font-size: 120%;
+  border: 2px solid black;
+  border-radius: 100px;
+
+  position: relative;
+  width: 17%;
+  height: 15%;
+  left: -5%;
+  top: -34%;
+  padding: 1%;
+}
+
+.TotalP1 {
+  display: block;
+  background-color: lightblue;
+  text-align: center;
+  font-size: 90%;
+  border: 2px solid black;
+  border-radius: 100px;
+
+  position: relative;
+  height: 8%;
+  width: 10%;
+  left: 12%;
+  top: -12%;
+  padding: 1%;
+}
+
+
+.BuildButton1 {
+  position: relative;
+  background-color: rgb(173, 215, 230);
+  width: 20%;
+  height: 75px;
+  left: -5%;
+  top: -12%;
+  bottom: -22%;
+  border-radius: 100px;
+  border-width: 4px;
+}
+
+.BuildButton1:active {
+  transform: scale(0.98);
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
+.BuildButton1:hover {
+  background-color: rgb(192, 218, 226);
+}
+
+
+.BuildingImageMain {
+  position: relative;
+  //background-color: rgb(176, 175, 175);
+  //border: 2px solid black;
+  width: 80px;
+  height: 80px;
+
+  left: -20%;
+  top: -33%;
+
+}
+
+///////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+body {
+  margin: 0%;
+  padding: 0%;
+  background-color: rgb(105, 103, 103);
+}
+
+main {
+  margin: 0%;
+  padding: 0%;
+  background-color: rgb(105, 103, 103);
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
