Component clicker update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,7 +70,7 @@
                 <img class="BuildingImageMain" src="assets/img/ArrowImg.png">
             </div>
         </div>-->
-        <app-building [TotalScore]="TotalScore" (Output)="updateData($event)"></app-building>
+        <app-building [TotalScore]="TotalScore" (Output)="updateClickerData($event)"></app-building>
 
         <div class="buildingBase">
             <div class="buildingBackground1">
