--- a/src/app/building/building.component.html
+++ b/src/app/building/building.component.html
@@ -3,10 +3,11 @@
         <span class="TotalP1"> Total:
             <span style="font-weight: bold; font-size: 130%;">{{clickerPower}}</span>
         </span>
-        <div class="BuildingLabel">Click Power {{TotalScore}}</div>
+        <div class="BuildingLabel">Click Power</div>
         <button class="BuildButton1" (click)="ClickerUp1()">
             <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
             <br> Cost:{{CPowerCost}}</button>
         <img class="BuildingImageMain" src="assets/img/ArrowImg.png">
     </div>
 </div>
+
