function for number suffixes exists

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     <div class="LeftSide">
 
         <div class="ScoreArea">
-            <h3>Your Number: <span style="font-size: 120%;">{{TotalScore}}</span></h3>
-
+            <h3>Your Number: <span style="font-size: 120%;">{{displayScore}}</span></h3>
+            <h4>Gizmos per Second: <span style="font-size: 100%;">{{displayIncrease}}</span></h4>
         </div>
 
         <button class="MainClick" (click)="clickAdd()">Click here!</button>
