refactored html with ngFor

--- a/src/app/building/building.component.html
+++ b/src/app/building/building.component.html
@@ -1,13 +1,13 @@
 <div class="buildingBase">
     <div class="buildingBackground1">
         <span class="TotalP1"> Total:
-            <span style="font-weight: bold; font-size: 130%;">{{clickerPower}}</span>
+            <span style="font-weight: bold; font-size: 130%;">{{ quantity }}</span>
         </span>
-        <div class="BuildingLabel">Click Power</div>
-        <button class="BuildButton1" (click)="ClickerUp1()">
+        <div class="BuildingLabel">{{ name }}</div>
+        <button class="BuildButton1">
             <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
-            <br> Cost:{{CPowerCost}}</button>
-        <img class="BuildingImageMain" src="assets/img/ArrowImg.png">
+            <br> Cost:{{ cost }}</button>
+        <img class="BuildingImageMain" [src]="img">
     </div>
 </div>
 
