--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
         <button class="RedButton" (click)="RedButtonClick()">Score Boost!</button>
 
-        <div class="UpgradeMenu">
+        <!-- <div class="UpgradeMenu">
 
             <div class="UpgradeBase">
                 <button class="UpgradeButton" (click)="UpgradeClickPower2x()">Buy!</button>
@@ -51,8 +51,8 @@
                 <button class="UpgradeButton" (click)="LworkshopProd5x()">Buy!</button>
                 <div class="UpgradeTitle">Large Workshop Production 5x<br>
                     Cost: {{LworkshopProd5xCost}}</div>
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
     </div>
 
     <!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
@@ -70,78 +70,7 @@
                 <img class="BuildingImageMain" src="assets/img/ArrowImg.png">
             </div>
         </div>-->
-        <app-building [TotalScore]="TotalScore" (Output)="updateClickerData($event)"></app-building>
-
-        <div class="buildingBase">
-            <div class="buildingBackground1">
-                <span class="TotalP1"> Total:
-                    <span style="font-weight: bold; font-size: 130%;">{{employees}}</span>
-                </span>
-                <div class="BuildingLabel">Employee</div>
-
-                <button class="BuildButton1" (click)="clickBuilding1()">
-                    <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
-                    <br> Cost:{{EmployeeCost}}</button>
-                <img class="BuildingImageMain" src="assets/img/EmployeeImg.png">
-            </div>
-        </div>
-
-        <div class="buildingBase">
-            <div class="buildingBackground1">
-                <span class="TotalP1"> Total:
-                    <span style="font-weight: bold; font-size: 130%;">{{Sworkshops}}</span>
-                </span>
-                <div class="BuildingLabel">Small Workshop</div>
-                <button class="BuildButton1" (click)="clickBuilding2()">
-                    <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
-                    <br> Cost:{{SworkshopCost}}
-                </button>
-                <img class="BuildingImageMain" src="assets/img/SmallWorkshopImg.png">
-            </div>
-        </div>
-
-        <div class="buildingBase">
-            <div class="buildingBackground1">
-                <span class="TotalP1"> Total:
-                    <span style="font-weight: bold; font-size: 130%;">{{Lworkshops}}</span>
-                </span>
-                <div class="BuildingLabel">Large Workshop</div>
-                <button class="BuildButton1" (click)="clickBuilding3()">
-                    <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
-                    <br> Cost:{{LworkshopCost}}
-                </button>
-                <img class="BuildingImageMain" src="assets/img/LargeWorkshopImg.png">
-            </div>
-        </div>
-
-        <div class="buildingBase">
-            <div class="buildingBackground1">
-                <span class="TotalP1"> Total:
-                    <span style="font-weight: bold; font-size: 130%;">{{Lworkshops}}</span>
-                </span>
-                <div class="BuildingLabel">Factory</div>
-                <button class="BuildButton1" (click)="clickBuilding3()">
-                    <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
-                    <br> Cost:{{LworkshopCost}}
-                </button>
-                <img class="BuildingImageMain" src="assets/img/Factory.png">
-            </div>
-        </div>
-
-        <div class=" buildingBase">
-            <div class="buildingBackground1">
-                <span class="TotalP1"> Total:
-                    <span style="font-weight: bold; font-size: 130%;">{{Lworkshops}}</span>
-                </span>
-                <div class="BuildingLabel">Large Workshop</div>
-                <button class="BuildButton1" (click)="clickBuilding3()">
-                    <span style="font-weight: bold; font-size: 115%; padding: .5%;">Purchase!</span>
-                    <br> Cost:{{LworkshopCost}}
-                </button>
-                <img class="BuildingImageMain" src="assets/img/LargeWorkshopImg.png">
-            </div>
-        </div>
-
+        <app-building *ngFor="let building of buildings" [name]="building.name" [quantity]="building.quantity"[cost]="building.cost" [img]="building.img" (click)="buyBuilding(building)"></app-building>
 
     </div>
 </main>
