--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .LeftSide {
-    width: 50%;
-    height: 100%;
+    width: 40%;
+    height: 50%;
 }
 
 .clicker {
@@ -8,3 +8,11 @@
     height: 20%;
     margin-top: 30%;
 }
+
+.titleText {
+    text-align: center;
+    margin-top: 2%;
+    font-size: 10vmin;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
