--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,23 @@
-.LeftSide {
-    width: 40%;
-    height: 50%;
-}
-
 .clicker {
-    width: 40%;
-    height: 20%;
-    margin-top: 30%;
+    width: 23vw;
+    height: 33vh;
+    
 }
 
 .titleText {
     text-align: center;
     margin-top: 2%;
     font-size: 10vmin;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.clickAreaLargeText {
+    font-size: 1.3vmax;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.clickAreaSmallText {
+    font-size: 1.1vmax;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
