--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,24 +1,16 @@
-.OverAll {
-  //position: fixed;
-  //grid-template-columns: 30% 70%;
-  //grid-template-rows: 15% 85;
-  margin: 0%;
-  padding: 0%;
-  background-color: #161a1f;
-}
-
 /////////////////////////////Center//////////////////////////////////////////////////////////////
 
 .header {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 14.3%;
+  height: 14vh;
   background-color: darkgray;
   border: 2px solid #3d3b36;
-  
 }
 
-
+.overall {
+  background-color: #3d3b36;
+}
 
 
 //////////////////////////////Left//////////////////////////////////////////////////////////////
@@ -26,10 +18,14 @@
 .LeftSide {
   margin-right: 30%;
   margin-left: 2%;
+  margin-top: 10%;
   display: inline-block;
+  width: 40%;
+  height: 50%;
 }
 
 .container {
+  margin-left: 2%;
   display:flex;
 }
 
@@ -38,56 +34,26 @@
   border: 2px solid black;
   border-radius: 100px;
   width: 53%;
-  height: 10%;
+  height: 10vh;
   top: 15.5%;
   left: .5%;
   padding: 1%;
   text-align: center;
-  display: block;
-  
+  display: inline-block;
 }
 
 .clickArea {
-  //background-color: yellow;
-  position:static;
-  margin-left: 10%;
+  position:relative;
+  margin-left: 7%;
 }
-
-.bottomLeft {
-  display: flex;
-}
-
-.MainClick {
-  background-color: lightblue;
-  width: 27%;
-  padding: 5%; //prev5
-  margin: 2%;
-  font-size: 2vw;
-  border-radius: 50px;
-  font-weight: bolder;
-
-  position: fixed;
-  left: 0%;
-  bottom: 30%;
-}
-
-.MainClick:active {
-  transform: scale(0.98);
-  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
-}
-
-.MainClick:hover {
-  background-color: rgb(192, 218, 226);
-}
-
 
 .RedButton {
   background-color: var(--RedButCol);
   font-weight: bolder;
   width:15%;
-  margin: 1%; //prev2
-  border-radius: 10000px;
-  //transition-duration: 0.1s;
+  margin: 1%;
+  border-radius: 100px;
+  font-size: 1.75vmin;
 }
 
 .RedButton:active {
@@ -97,19 +63,23 @@
 
 .UpgradeMenu {
   background-color: rgb(105, 103, 103);
-  position: relative;
+  
   overflow-y: scroll;
   border: 4px solid black;
   min-width: 27vw;
+  height:30vh;
+  
   width: 22%;
   bottom: 0%;
   left: 0%;
+
+  margin-left: 2%;
 }
 
 .UpgradeBase {
   background-color: lightgray;
   border: 2px solid black;
-  height: 30%;
+  height: 8vh;
   border-top-right-radius: 30px 50%;
   border-bottom-right-radius: 30px 50%;
 }
@@ -125,6 +95,7 @@
   width: 70%;
   left: 2%;
   top: -80%;
+  font-size: 1.5vmax;
 }
 
 .UpgradeButton {
@@ -137,6 +108,7 @@
   width: 20%;
   top: 2.5%;
   right: -78.5%;
+  font-size: 1.25vmax;
 }
 
 .UpgradeButton:active {
@@ -151,7 +123,7 @@
 
 
 
-//////////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////RIGHT SIDE////////////////////////////////////////////////////////////
 .RightSide {
   background-color: rgb(105, 103, 103);
   overflow-y: scroll;
@@ -177,7 +149,6 @@
   width: 90%;
   padding: 2%; //prev2
   height: 75%;
-  //border-radius: 100px;
   border-top-left-radius: 30px 50%;
   border-bottom-left-radius: 30px 50%;
 }
@@ -192,7 +163,7 @@
   background-color: lightblue;
   font-weight: bold;
   text-align: center;
-  font-size: 120%;
+  font-size: 1.25vmax;
   border: 2px solid black;
   border-radius: 100px;
 
@@ -208,7 +179,7 @@
   display: block;
   background-color: lightblue;
   text-align: center;
-  font-size: 90%;
+  font-size: 1.25vmax;
   border: 2px solid black;
   border-radius: 100px;
 
@@ -220,17 +191,25 @@
   padding: 1%;
 }
 
+.TotalP1value {
+  font-weight: bold; 
+  font-size: 1.75vmax;
+  margin-left: -5%;
+  line-height: 5%;
+}
+
 
 .BuildButton1 {
   position: relative;
   background-color: rgb(173, 215, 230);
   width: 20%;
-  height: 75px;
+  height: 10vh;
   left: -5%;
   top: -12%;
   bottom: -22%;
   border-radius: 100px;
   border-width: 4px;
+  font-size: 1.25vmax;
 }
 
 .BuildButton1:active {
@@ -245,10 +224,9 @@
 
 .BuildingImageMain {
   position: relative;
-  //background-color: rgb(176, 175, 175);
-  //border: 2px solid black;
-  width: 80px;
-  height: 80px;
+
+  width: 5vw;
+  height: 10vh;
 
   left: -20%;
   top: -33%;
