--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,16 +2,12 @@
 
 .header {
   position: absolute;
-  width: 100%;
+  width: 99.3%;
   height: 14vh;
   background-color: darkgray;
-  border: 2px solid #3d3b36;
+  overflow-x: hidden;
+  margin-left: 0.3%;
 }
-
-.overall {
-  background-color: #3d3b36;
-}
-
 
 //////////////////////////////Left//////////////////////////////////////////////////////////////
 
@@ -44,7 +40,7 @@
 
 .clickArea {
   position:relative;
-  margin-left: 7%;
+  margin-left: 17%;
 }
 
 .RedButton {
@@ -95,7 +91,8 @@
   width: 70%;
   left: 2%;
   top: -80%;
-  font-size: 1.5vmax;
+  font-size: 1.25vmax;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .UpgradeButton {
@@ -109,6 +106,7 @@
   top: 2.5%;
   right: -78.5%;
   font-size: 1.25vmax;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .UpgradeButton:active {
@@ -125,7 +123,7 @@
 
 /////////////////////////RIGHT SIDE////////////////////////////////////////////////////////////
 .RightSide {
-  background-color: rgb(105, 103, 103);
+  background-color: #3d3b36;
   overflow-y: scroll;
   margin-left: 2%;
   position: fixed;
@@ -147,7 +145,7 @@
   position: relative;
   left: 3%;
   width: 90%;
-  padding: 2%; //prev2
+  padding: 2%;
   height: 75%;
   border-top-left-radius: 30px 50%;
   border-bottom-left-radius: 30px 50%;
@@ -241,24 +239,11 @@
   margin-left: -50%;
   width: 200%;
   font-weight: 50;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-///////////////////////////////////////////////////////////////////////////////////////////
+//////////////////////////WHOLE SCREEN////////////////////////////////////////////////////////////
 
-
-
-
-body {
-  margin: 0%;
-  padding: 0%;
-  background-color: rgb(105, 103, 103);
-}
-
-main {
-  margin: 0%;
-  padding: 0%;
-  background-color: rgb(105, 103, 103);
-}
 
 html,
 body {
@@ -268,4 +253,9 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.overall {
+  background-color: #3d3b36;
+  height: 100%
 }
