--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -1,5 +1,5 @@
 <div class="UpgradeBase">
     <button class="UpgradeButton">Buy!</button>
-    <div class="UpgradeTitle">{{ name }}<br>
+    <div class="UpgradeTitle">{{ name }}<br><br>
         Cost: {{ cost | number}}</div>
 </div>
